--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 togglz.features.FOO.enabled=true
 togglz.features.FEE.enabled=false
+togglz.console.enabled=true
+togglz.console.secured=false
+togglz.console.path=/togglz-console
+togglz.console.use-management-port=false
