--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@ plugins {
     id 'org.springframework.boot' version '2.6.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+mainClassName = 'com.example.mytoggles.MainTest'
 
 configurations {
     compileOnly {
